--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "sweetalert2": "^11.17.2",
     "swiper": "^11.2.4"
   }
 }
